[gd_scene load_steps=44 format=2]

[ext_resource path="res://levels/Level_3.gd" type="Script" id=1]
[ext_resource path="res://images/watersource.png" type="Texture" id=2]
[ext_resource path="res://images/showerhead.png" type="Texture" id=3]
[ext_resource path="res://images/pipes/end_left_cap_1.png" type="Texture" id=4]
[ext_resource path="res://images/pipes/straight_cap_1.png" type="Texture" id=5]
[ext_resource path="res://images/pipes/end_right_cap_1.png" type="Texture" id=6]
[ext_resource path="res://images/pipes/curved_1_cap_2.png" type="Texture" id=7]
[ext_resource path="res://images/pipes/end_right_cap_2.png" type="Texture" id=8]
[ext_resource path="res://images/pipes/upright_cap_2.png" type="Texture" id=9]
[ext_resource path="res://images/pipes/straight_cap_2.png" type="Texture" id=10]
[ext_resource path="res://images/pipes/end_bottom_cap_2.png" type="Texture" id=11]
[ext_resource path="res://images/pipes/curved_2_cap_2.png" type="Texture" id=12]
[ext_resource path="res://images/pipes/end_bottom_cap_1.png" type="Texture" id=13]
[ext_resource path="res://images/pipes/upright_cap_1.png" type="Texture" id=14]
[ext_resource path="res://images/pipes/curved_2_cap_1.png" type="Texture" id=15]
[ext_resource path="res://resources/Type Machine.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://images/water_animation/cap_1/cap_1.tres" type="Texture" id=17]
[ext_resource path="res://images/water_animation/shower_low/shower_low.tres" type="Texture" id=18]
[ext_resource path="res://images/water_animation/shower_high/shower_high.tres" type="Texture" id=19]
[ext_resource path="res://images/water_animation/full_2/full_cap_2.tres" type="Texture" id=20]
[ext_resource path="res://images/water_animation/cap_2/cap_2.tres" type="Texture" id=21]
[ext_resource path="res://images/water_animation/full_1/full_cap_1.tres" type="Texture" id=22]
[ext_resource path="res://images/connector.png" type="Texture" id=23]
[ext_resource path="res://images/sad_icon.png" type="Texture" id=24]
[ext_resource path="res://images/happy_icon.png" type="Texture" id=25]
[ext_resource path="res://images/soap_animation/soap_full/soap_full.tres" type="Texture" id=26]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=27]

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=8]
size = 23
font_data = ExtResource( 16 )

[sub_resource type="TileSet" id=13]
0/name = "cap_1.tres 0"
0/texture = ExtResource( 17 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=10]
0/name = "cap_2.tres 0"
0/texture = ExtResource( 21 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "full_cap_2.tres 1"
1/texture = ExtResource( 20 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=9]
0/name = "cap_1.tres 0"
0/texture = ExtResource( 17 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "full_cap_1.tres 1"
1/texture = ExtResource( 22 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=11]
0/name = "cap_2.tres 0"
0/texture = ExtResource( 21 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "full_cap_2.tres 1"
1/texture = ExtResource( 20 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 16 )

[sub_resource type="TileSet" id=1]
0/name = "end_left_cap_1.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "end_right_cap_1.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "straight_cap_1.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "end_bottom_cap_2.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "upright_cap_2.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 192, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "curved_1_cap_2.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 192, 192 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "straight_cap_2.png 3"
3/texture = ExtResource( 10 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 192 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "end_right_cap_2.png 4"
4/texture = ExtResource( 8 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 192 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="TileSet" id=12]
0/name = "straight_cap_1.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "end_left_cap_1.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
4/name = "curved_2_cap_1.png 4"
4/texture = ExtResource( 15 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 192, 192 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "upright_cap_1.png 5"
5/texture = ExtResource( 14 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 192, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "end_bottom_cap_1.png 6"
6/texture = ExtResource( 13 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 192, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "end_bottom_cap_2.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "upright_cap_2.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 192, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "curved_1_cap_2.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 192, 192 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "curved_2_cap_2.png 3"
3/texture = ExtResource( 12 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 192, 192 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "straight_cap_2.png 4"
4/texture = ExtResource( 10 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 192 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="DynamicFont" id=5]
size = 15
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 16 )

[node name="Level_3" type="Node"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 27 )]

[node name="Watersource" type="Sprite" parent="."]
position = Vector2( 184, 832 )
texture = ExtResource( 2 )

[node name="Message" type="Label" parent="."]
margin_left = 128.0
margin_top = 232.0
margin_right = 816.0
margin_bottom = 434.0
custom_fonts/font = SubResource( 6 )
text = "This time, multiple changes need to be made. Try different routes!"
align = 1
autowrap = true

[node name="Return" type="Button" parent="."]
visible = false
margin_left = 816.0
margin_top = 944.0
margin_right = 1072.0
margin_bottom = 1024.0
custom_fonts/font = SubResource( 8 )
disabled = true
text = "RETURN TO HOME"

[node name="Water" type="Node" parent="."]

[node name="1" type="TileMap" parent="Water"]
position = Vector2( -40, 120 )
tile_set = SubResource( 13 )
format = 1

[node name="2" type="TileMap" parent="Water"]
position = Vector2( -40, 96 )
tile_set = SubResource( 10 )
format = 1

[node name="3" type="TileMap" parent="Water"]
position = Vector2( -48, 136 )
tile_set = SubResource( 9 )
format = 1

[node name="4" type="TileMap" parent="Water"]
position = Vector2( -40, 96 )
tile_set = SubResource( 11 )
format = 1

[node name="Shower" type="Sprite" parent="."]
position = Vector2( 584, -16 )
texture = ExtResource( 3 )
offset = Vector2( 1080, 800 )

[node name="S_Control" type="Control" parent="Shower"]
margin_left = 1040.0
margin_top = 768.0
margin_right = 1152.0
margin_bottom = 912.0

[node name="High" type="Sprite" parent="Shower"]
visible = false
position = Vector2( 1104, 872 )
z_index = 2
texture = ExtResource( 19 )

[node name="Low" type="Sprite" parent="Shower"]
visible = false
position = Vector2( 1104, 872 )
z_index = 2
texture = ExtResource( 18 )

[node name="Soap" type="Sprite" parent="Shower"]
position = Vector2( 1120, 872 )
z_index = 1
texture = ExtResource( 26 )

[node name="Happy" type="Sprite" parent="Shower"]
visible = false
position = Vector2( 1120, 880 )
texture = ExtResource( 25 )

[node name="Sad" type="Sprite" parent="Shower"]
position = Vector2( 1120, 880 )
texture = ExtResource( 24 )

[node name="Score" type="Label" parent="."]
margin_left = 1656.0
margin_top = 912.0
margin_right = 1768.0
margin_bottom = 950.0
custom_fonts/font = SubResource( 7 )
align = 1

[node name="Pipes" type="Node" parent="."]

[node name="1" type="TileMap" parent="Pipes"]
position = Vector2( -40, 96 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 655365, 0, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 2, 0, 655380, 2, 0, 655381, 2, 0, 655382, 2, 0, 655383, 2, 0, 655384, 1, 0 )

[node name="2" type="TileMap" parent="Pipes"]
position = Vector2( -40, 96 )
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 327682, 2, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 4, 0, 524290, 1, 0, 589826, 0, 0 )

[node name="3" type="TileMap" parent="Pipes"]
position = Vector2( -48, 112 )
tile_set = SubResource( 12 )
format = 1
tile_data = PoolIntArray( 327697, 1, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 4, 0, 458776, 5, 0, 524312, 5, 0, 589848, 6, 0 )

[node name="4" type="TileMap" parent="Pipes"]
position = Vector2( -40, 96 )
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( 65550, 2, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 65556, 4, 0, 65557, 4, 0, 65558, 4, 0, 65559, 4, 0, 65560, 4, 0, 65561, 4, 0, 65562, 4, 0, 65563, 3, 0, 262158, 0, 0, 262171, 1, 0, 327707, 1, 0, 393243, 1, 0, 458779, 1, 0, 524315, 1, 0, 589851, 0, 0 )

[node name="P1_Control" type="Control" parent="Pipes"]
margin_left = 312.0
margin_top = 736.0
margin_right = 1520.0
margin_bottom = 864.0

[node name="P2_Control" type="Control" parent="Pipes"]
margin_left = 128.0
margin_top = 440.0
margin_right = 768.0
margin_bottom = 584.0

[node name="2a" type="Control" parent="Pipes/P2_Control"]
margin_left = -24.0
margin_top = 144.0
margin_right = 128.0
margin_bottom = 272.0

[node name="P3_Control" type="Control" parent="Pipes"]
margin_left = 1080.0
margin_top = 448.0
margin_right = 1632.0
margin_bottom = 560.0

[node name="3a" type="Control" parent="Pipes/P3_Control"]
margin_left = 456.0
margin_top = 112.0
margin_right = 568.0
margin_bottom = 264.0

[node name="P4_Control" type="Control" parent="Pipes"]
margin_left = 888.0
margin_top = 200.0
margin_right = 1840.0
margin_bottom = 312.0

[node name="4a" type="Control" parent="Pipes/P4_Control"]
margin_left = 840.0
margin_top = 128.0
margin_right = 976.0
margin_bottom = 512.0

[node name="Cost" type="Node" parent="."]

[node name="1_plus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 1024.0
margin_top = 856.0
margin_right = 1023.36
margin_bottom = 861.24
custom_fonts/font = SubResource( 5 )
text = "+"

[node name="1_minus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 824.0
margin_top = 856.0
margin_right = 823.36
margin_bottom = 861.24
custom_fonts/font = SubResource( 5 )
text = "-"

[node name="1_cost" type="Label" parent="Cost"]
margin_left = 824.0
margin_top = 856.0
margin_right = 1056.0
margin_bottom = 912.0
custom_fonts/font = SubResource( 4 )
align = 1

[node name="2_plus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 576.0
margin_top = 584.0
margin_right = 575.36
margin_bottom = 589.24
custom_fonts/font = SubResource( 5 )
text = "+"

[node name="2_minus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 376.0
margin_top = 584.0
margin_right = 375.36
margin_bottom = 589.24
custom_fonts/font = SubResource( 5 )
text = "-"

[node name="2_cost" type="Label" parent="Cost"]
margin_left = 376.0
margin_top = 584.0
margin_right = 608.0
margin_bottom = 640.0
custom_fonts/font = SubResource( 4 )
align = 1

[node name="3_plus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 1432.0
margin_top = 552.0
margin_right = 1431.36
margin_bottom = 557.24
custom_fonts/font = SubResource( 5 )
text = "+"

[node name="3_minus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 1232.0
margin_top = 552.0
margin_right = 1231.36
margin_bottom = 557.24
custom_fonts/font = SubResource( 5 )
text = "-"

[node name="3_cost" type="Label" parent="Cost"]
margin_left = 1232.0
margin_top = 552.0
margin_right = 1464.0
margin_bottom = 608.0
custom_fonts/font = SubResource( 4 )
align = 1

[node name="4_plus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 1488.0
margin_top = 328.0
margin_right = 1487.36
margin_bottom = 333.24
custom_fonts/font = SubResource( 5 )
text = "+"

[node name="4_minus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 1288.0
margin_top = 328.0
margin_right = 1287.36
margin_bottom = 333.24
custom_fonts/font = SubResource( 5 )
text = "-"

[node name="4_cost" type="Label" parent="Cost"]
margin_left = 1288.0
margin_top = 328.0
margin_right = 1520.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 4 )
align = 1

[node name="Connector" type="Sprite" parent="."]
position = Vector2( 936, 512 )
texture = ExtResource( 23 )

[node name="C_Control" type="Control" parent="Connector"]
margin_left = -88.0
margin_top = -48.0
margin_right = 88.0
margin_bottom = 56.0

[node name="Tooltips" type="CanvasLayer" parent="."]

[node name="S_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 1144.0
margin_top = 920.0
margin_right = 1284.0
margin_bottom = 1112.0

[node name="Label" type="Label" parent="Tooltips/S_Panel"]
margin_left = 12.0
margin_top = 16.0
margin_right = 124.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 14 )
autowrap = true

[node name="P1_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 1152.0
margin_top = 768.0
margin_right = 1336.0
margin_bottom = 904.0

[node name="Label" type="Label" parent="Tooltips/P1_Panel"]
margin_left = 16.0
margin_top = 15.0
margin_right = 168.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 16 )
autowrap = true

[node name="P2_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 640.0
margin_top = 517.0
margin_right = 824.0
margin_bottom = 653.0

[node name="Label" type="Label" parent="Tooltips/P2_Panel"]
margin_left = 16.0
margin_top = 15.0
margin_right = 168.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 16 )
autowrap = true

[node name="P3_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 1536.0
margin_top = 544.0
margin_right = 1720.0
margin_bottom = 680.0

[node name="Label" type="Label" parent="Tooltips/P3_Panel"]
margin_left = 16.0
margin_top = 15.0
margin_right = 168.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 16 )
autowrap = true

[node name="P4_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 1536.0
margin_top = 261.0
margin_right = 1720.0
margin_bottom = 397.0

[node name="Label" type="Label" parent="Tooltips/P4_Panel"]
margin_left = 16.0
margin_top = 15.0
margin_right = 168.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 16 )
autowrap = true

[node name="C_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 1024.0
margin_top = 480.0
margin_right = 1264.0
margin_bottom = 704.0

[node name="Label" type="Label" parent="Tooltips/C_Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 224.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 15 )
text = "Connector

Splits pipe path. If sending to multiple destinations, it will split water units down each path."
autowrap = true

[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
[connection signal="mouse_entered" from="Shower/S_Control" to="." method="_on_S_Control_mouse_entered"]
[connection signal="mouse_exited" from="Shower/S_Control" to="." method="_on_S_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P1_Control" to="." method="_on_P1_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P1_Control" to="." method="_on_P1_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P2_Control" to="." method="_on_P2_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P2_Control" to="." method="_on_P2_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P2_Control/2a" to="." method="_on_P2_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P2_Control/2a" to="." method="_on_P2_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P3_Control" to="." method="_on_P3_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P3_Control" to="." method="_on_P3_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P3_Control/3a" to="." method="_on_P3_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P3_Control/3a" to="." method="_on_P3_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P4_Control" to="." method="_on_P4_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P4_Control" to="." method="_on_P4_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P4_Control/4a" to="." method="_on_P4_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P4_Control/4a" to="." method="_on_P4_Control_mouse_exited"]
[connection signal="pressed" from="Cost/1_plus" to="." method="_on_1_plus_pressed"]
[connection signal="pressed" from="Cost/1_minus" to="." method="_on_1_minus_pressed"]
[connection signal="pressed" from="Cost/2_plus" to="." method="_on_2_plus_pressed"]
[connection signal="pressed" from="Cost/2_minus" to="." method="_on_2_minus_pressed"]
[connection signal="pressed" from="Cost/3_plus" to="." method="_on_3_plus_pressed"]
[connection signal="pressed" from="Cost/3_minus" to="." method="_on_3_minus_pressed"]
[connection signal="pressed" from="Cost/4_plus" to="." method="_on_4_plus_pressed"]
[connection signal="pressed" from="Cost/4_minus" to="." method="_on_4_minus_pressed"]
[connection signal="mouse_entered" from="Connector/C_Control" to="." method="_on_C_Control_mouse_entered"]
[connection signal="mouse_exited" from="Connector/C_Control" to="." method="_on_C_Control_mouse_exited"]
